# gacha-sign

./: .gitignore  README.md  _conf_schema.json  cli.py  config.example.yaml  main.py  metadata.yaml  pyproject.toml  requirements.txt
src/gacha_sign/: __init__.py  base.py  config.py  credentials.py  crypto.py  debug_log.py  http.py  notify.py  runner.py
