[project]
name = "gacha-sign"
version = "0.1.0"
description = "多游戏社区 APP 自动签到脚本（米游社 / 库街区 / 塔吉多）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]
[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/gacha_sign"]
